fixed index html

--- a/index.html
+++ b/index.html
@@ -77,11 +77,9 @@
             rel="gallery-image"
             class="gallery-image-mobile"
           />
-          />
           <div class="one-day-art-gallery">
             <h1 class="your-day-at-the-gallery-two-style">
-              YOUR DAY<br />
-              AT THE GALLERY
+              YOUR DAY AT THE GALLERY
             </h1>
             <p class="paragraph-style">
               Wander through our distinct collections and find new insights
