added anchor tag

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 Visit us and find out.
               </p>
             </div>
-
             <div class="box-style">
+              <a href="location.html"></a>
               <div class="location-style loc-button">
                 <h3 class="location-container-style">OUR LOCATION</h3>
               </div>
