--- a/location.html
+++ b/location.html
@@ -6,6 +6,7 @@
     <title>Back to home</title>
   </head>
   <body>
+    <a href="index.html"></a>
     <div class="container-backtohome-style">
       <div>
         <div class="map-home-style">
