--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
               </p>
             </div>
             <div class="box-style">
-              <a href="location.html"></a>
               <div class="location-style loc-button">
+                <a href="./location.html"></a>
                 <h3 class="location-container-style">OUR LOCATION</h3>
               </div>
               <div class="arrow-style greater-arrow">
