fixed the button BACK TO HOME added anchor tag

--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
             </div>
             <div class="box-style">
               <div class="location-style loc-button">
-                <a href="./location.html"></a>
-                <h3 class="location-container-style">OUR LOCATION</h3>
+                <a class="link location-container-style" href="location.html "
+                  >OUR LOCATION</a
+                >
               </div>
               <div class="arrow-style greater-arrow">
                 <img
