fixed anchor tag

--- a/location.html
+++ b/location.html
@@ -15,11 +15,18 @@
             rel="icon-arrow-left"
             class="arrow-two-style"
           />
-          <h3 class="backtohome-style">BACK TO HOME</h3>
+          <a class="link-art backtohome-style" href="index.html"
+            >BACK TO HOME</a
+          >
         </div>
         <img
+          src="assets/desktop/image-map.png"
+          rel="map-image"
+          class="map-desktop"
+        />
+        <img
           src="assets/tablet/image-map.png"
-          rel="map-imag"
+          rel="map-image"
           class="map-two-style"
         />
         <img
